--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
+  <!--<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />-->
   <link rel=" stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
   <link rel="stylesheet" href="./css/styles.css" />
@@ -45,7 +45,7 @@
         <button class="button-text" type="button">Order Service</button>
       </div>
     </section>
-    <section>
+    <section class="feat-section">
       <div class="container">
         <h2 class="section-title hidden-title">Features</h2>
         <ul class="feat-list">
